Fix Title + Paragraph overlap

--- a/styles/about.css
+++ b/styles/about.css
@@ -15,16 +15,18 @@ header {
   position: relative;
   background-color: #4B182E;
   height: 600px;
+  display: flex;
+  flex-direction: column;
 }
 
 .header-title {
-  display: inline-block;
+  display: inline;
   text-align: center;
-  margin: 50px 8% 10% 8%;
+  margin: 50px 8% 30px; 8%;
 }
 
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 450px;
   position: relative;
   margin: 0 auto;
 }
@@ -44,7 +46,7 @@ header {
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 25%;
+  top: 30%;
   width: auto;
   padding: 8%;
   color: #FEEB99;
@@ -70,12 +72,12 @@ section {
   padding: 34px 8%;
 }
 
-#four-tops {
-  padding-top: 53px;
+.section-paragraph {
+  padding-bottom: 30px;
 }
 
-.section-paragraph {
-  padding-top: 30px;
+.section-title {
+  padding-bottom: 30px;
 }
 
 .less-space {
