--- a/styles/home.css
+++ b/styles/home.css
@@ -51,7 +51,6 @@ header {
 }
 
 .project-card {
-  align-items: center;
   display: flex;
   height: 315px;
   justify-content: center;
@@ -76,9 +75,8 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 200%;
-  box-shadow: ;
   height: 315px;
-  margin: 30px auto;
+  margin: 30px 30px;
   width: 315px;
 }
 
