--- a/styles/main.css
+++ b/styles/main.css
@@ -160,10 +160,6 @@ footer {
 
 .red-title-box {
   position: relative;
-}
-
-.red-title {
-  position: absolute;
   top: -35px;
 }
 
