--- a/styles/project.css
+++ b/styles/project.css
@@ -61,16 +61,6 @@ section {
   margin-bottom: 5px;
 }
 
-/** RED BG CODE **/
-
-#user-stories {
-  padding-top: 83px;
-}
-
-#pref-test {
-  padding-top: 39px;
-}
-
 /** FINAL CHANGES LIST **/
 
 .check {
